--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fortune.</title>
+    <title>Michael</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Poppins:wght@800&display=swap" rel="stylesheet">
@@ -238,7 +238,7 @@
       </div>
     </nav>
     <div class='intro'>
-      <h1>Hi, <br>I'm Fortune Akano.<br>A Web developer</h1>
+      <h1>Hi, <br>I'm Michael Bodemeh.<br>A Web developer</h1>
       <img class='profile-image' src="{% static 'profile.jpeg' %}">
     </div>
     <p>A successful website does three things:<br>
@@ -248,7 +248,7 @@
 
     <div id='about'>
       <h2>about me.</h2>
-      <h3>Fortune Akano</h3>
+      <h3>Michael Bodemeh</h3>
       
       <p>I am a young tech enthusiast certified in web development that help people and firms get closer to acheiving their goals by building functional and beautiful websites</p>
       <p>I'm a lifelong learner and I'm always looking for new ways to grow and improve my skills.</p>
